Add back integration worker tags
[#156865602](ttps://www.pivotaltracker.com/story/show/156865602)

Co-authored-by: Luan Santos <lsantos@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -315,7 +315,7 @@ jobs:
       - task: tests
         privileged: true
         file: bosh-src/ci/tasks/test-integration-gocli.yml
-        tags: ["bosh-integration"]
+        tags: ["bosh-integration-1"]
         params:
           DB:           postgresql
           SHA2_MODE:    true
@@ -346,7 +346,7 @@ jobs:
       - task: tests
         privileged: true
         file: bosh-src/ci/tasks/test-integration-gocli.yml
-        tags: ["bosh-integration"]
+        tags: ["bosh-integration-2"]
         params:
           DB:           mysql
         on_failure:
@@ -377,7 +377,7 @@ jobs:
       - task: tests
         privileged: true
         file: bosh-src/ci/tasks/test-integration-gocli.yml
-        tags: ["bosh-integration"]
+        tags: ["bosh-integration-3"]
         params:
           DB:           postgresql
           SHA2_MODE:    true
@@ -409,7 +409,7 @@ jobs:
       - task: tests
         privileged: true
         file: bosh-src/ci/tasks/test-integration-gocli.yml
-        tags: ["bosh-integration"]
+        tags: ["bosh-integration-4"]
         params:
           DB:           postgresql
           DEFAULT_UPDATE_VM_STRATEGY: create-swap-delete
@@ -442,7 +442,7 @@ jobs:
 
       - task: tests
         privileged: true
-        tags: ["bosh-integration"]
+        tags: ["bosh-integration-5"]
         config:
           platform: linux
           image_resource:
@@ -485,14 +485,14 @@ jobs:
         - task: upgrade-with-postgres
           privileged: true
           file: bosh-src/ci/tasks/test-upgrade.yml
-          tags: ["bosh-integration"]
+          tags: ["bosh-integration-6"]
           params:
             DB: postgresql
 
         - task: upgrade-with-mysql
           privileged: true
           file: bosh-src/ci/tasks/test-upgrade.yml
-          tags: ["bosh-integration"]
+          tags: ["bosh-integration-7"]
           params:
             DB: mysql
 
@@ -614,7 +614,7 @@ jobs:
     - task: test
       privileged: true
       file: bosh-fuzz-tests/ci/tasks/test.yml
-      tags: ["bosh-integration"]
+      tags: ["bosh-integration-8"]
       params:
         BOSH_SRC_PATH: bosh-src/src
         RUBY_VERSION: 2.4.4
