--- a/releases/index.yml
+++ b/releases/index.yml
@@ -615,6 +615,8 @@ builds:
     version: "69"
   eb4a3116-29cb-47b6-99ad-3fa06388eea2:
     version: "122"
+  eb4f002b-c108-4ca2-430a-141c569c3ab7:
+    version: 263.10.0
   ec126ab0-3eab-453a-9891-2ce83b402dd1:
     version: "251"
   ecb7f48d4c97aff8fc7ce0ccde7ea3efc4c987bb:
