--- a/.final_builds/jobs/director/index.yml
+++ b/.final_builds/jobs/director/index.yml
@@ -171,6 +171,10 @@ builds:
     version: 61f576fafb72e856ef4765f59ed5b387f40d892e
     blobstore_id: 35429e5b-7efc-48e7-a7a9-8bbb51d71458
     sha1: b72b42c9625f46ce0f9d4a2b6c71f592fa9b8ebb
+  68959dccdce11e399f7fdb3ed55c20910eef193d:
+    version: 68959dccdce11e399f7fdb3ed55c20910eef193d
+    blobstore_id: 375d3724-5c27-47b6-4a5b-1b9ee2f6d9b3
+    sha1: 4dd2610dcf1e4c7fad1ad33cf23b07f7d322bd58
   6bf1a793f9eb00ad6b96e39cde2081377e48dc3d:
     version: 6bf1a793f9eb00ad6b96e39cde2081377e48dc3d
     blobstore_id: f1d0c065-e04a-42a6-77db-fa3b6671fe25
