--- a/releases/index.yml
+++ b/releases/index.yml
@@ -499,6 +499,8 @@ builds:
     version: "120"
   bf9678dc-ee9c-4811-a329-223f481411a8:
     version: "103"
+  c2872146-2f3b-4299-68b4-58a1c830d3f2:
+    version: 262.8.0
   c31b8fec04fdf27f8e7a3a361ae0019bf4d0c3b4:
     version: "1"
   c349618d-11e2-4cdb-9286-8da52620951d:
