Add events when orphaning VMs
[finishes #156747535](https://www.pivotaltracker.com/story/show/156747535)

Co-authored-by: Chris Dutra <cdutra@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -779,6 +779,7 @@ jobs:
     plan:
       - aggregate:
         - get: bosh-src
+          version: every
           trigger: true
           passed:
           - bats-ubuntu
