Fix timezone issues in bosh-blobstore-client
- python-dateutils requires the tzdata package which is not already
present on ubuntu:xenial image
- need to explicitly declare that the docker image runs in UTC time to
prevent tzdata's default interactive pkg setup

[#156582073](https://www.pivotaltracker.com/story/show/156582073)

--- a/ci/docker/bosh-blobstore-client/Dockerfile
+++ b/ci/docker/bosh-blobstore-client/Dockerfile
@@ -1,7 +1,13 @@
 FROM ubuntu:xenial
 
+ENV TZ=Etc/UTC
+
 RUN \
   apt-get update \
+  && apt-get install -y \
+    tzdata \
+  && ln -snf /usr/share/zoneinfo/Etc/UTC /etc/localtime \
+  && echo $TZ > /etc/timezone \
   && apt-get -y upgrade \
   && apt-get -y install \
     curl \
