Fix main-bats-aws, ubuntu chroot images
[#156582073](https://www.pivotaltracker.com/story/show/156582073)

--- a/ci/docker/main-bats-aws/Dockerfile
+++ b/ci/docker/main-bats-aws/Dockerfile
@@ -1,6 +1,10 @@
 FROM bosh/main-ruby-go
 
-RUN apt-get update
-RUN apt-get install -y python3-pip
-RUN pip3 install awscli --upgrade --user
+RUN \
+  apt-get update \
+  && apt-get install -y \
+    python3-pip \
+  && export LC_ALL=C \
+  && pip3 install awscli --upgrade --user
+
 ENV PATH=/root/.local/bin:$PATH
