--- a/ci/pipelines/docker-images/pipeline.yml
+++ b/ci/pipelines/docker-images/pipeline.yml
@@ -124,9 +124,7 @@ jobs:
           - "build-main-base"
       - put: main-mysql-5.6
         params:
-          build: "bosh-src/ci/docker/main-mysql"
-          build_args:
-            DB_VERSION: "-5.6"
+          build: "bosh-src/ci/docker/main-trusty-mysql-5.6"
         get_params:
           skip_download: true
 
@@ -142,7 +140,7 @@ jobs:
         params:
           build: "bosh-src/ci/docker/main-mysql"
           build_args:
-            DB_VERSION: ""
+            DB_VERSION: "5.7"
         get_params:
           skip_download: true
 
