Revert main-ruby-go back to trusty
[#156582073](https://www.pivotaltracker.com/story/show/156582073)

Co-authored-by: Rob Day-Reynolds <rdayreynolds@pivotal.io>

--- a/ci/docker/main-ruby-go/Dockerfile
+++ b/ci/docker/main-ruby-go/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:xenial
+FROM ubuntu:trusty
 
 # basic deps {
 RUN \
@@ -15,7 +15,6 @@ RUN \
     libxml2-dev \
     libxslt-dev \
     locales \
-    locales-all \
     ruby \
     tar \
     wget \
