Switch libmariadb-client to trusty package name
[#156582073](https://www.pivotaltracker.com/story/show/156582073)

Co-authored-by: Rob Day-Reynolds <rdayreynolds@pivotal.io>

--- a/ci/docker/main-base/Dockerfile
+++ b/ci/docker/main-base/Dockerfile
@@ -2,7 +2,7 @@ FROM bosh/main-ruby-go
 
 # BOSH dependencies {
 RUN apt-get update && apt-get install -y \
-	libmariadb-client-lgpl-dev \
+	libmariadb-client-dev \
 	redis-server \
 	libpq-dev \
 	sqlite3 \
