libmariadb-client => libmariadbclient
[#156582073](https://www.pivotaltracker.com/story/show/156582073)

Co-authored-by: Rob Day-Reynolds <rdayreynolds@pivotal.io>

--- a/ci/docker/compiled-release/Dockerfile
+++ b/ci/docker/compiled-release/Dockerfile
@@ -7,7 +7,7 @@ RUN \
   && apt-get update \
   && apt-get install -y \
     mysql-client \
-    libmariadb-client-dev \
+    libmariadbclient-dev \
     postgresql-client-9.4 \
     libpq-dev \
     sqlite3 \
