Revert recent docker image changes
There were too many changes involved, and we need things to get back to
green. Follow up commits will restore changes in smaller steps, and make
sure there are fewer dependencies which are going to be affected.

This reverts commits:

 * 58e0e7b77835d781ea11df19af576f28ececd036
 * d24d46c7719b20b5fb86abb78ffa81c40b6e1aa3
 * 689b401867280bde36820a5864d879eb4a64f076
 * 9451ee36970419d5d396a8d007b6820ed0a82f23
 * 480ee108f05d414d66bed81deae9dd49e773fd68
 * 315c4e5b2e050e5bf1887a9f51bf4bebe70cdc5c
 * 9b12715fa41f7a884e7f06b46dac955c63195a5e
 * 9bcc44f8a34105dc022cd7d640de924d2000a91e
 * 7c87aa00094139e2f036e38c1181b485948cca5d
 * a9664d3849828b95db85cdce6bcb0ee27ebc1f70
 * 449a4d3dab54190015a5f9ce1a7f549fa868c2d4
 * 4fa5b12af150e356f32841bbfd6f2bada250959d
 * 339e80b656f91c679aaf1d228cd44ab126097848
 * 110eebea71add33ebb6e9166cb6c36cf5bddfed6
 * 45eca4b313761ac5008320b7f31546e7a367e081
 * 5c45c5a8eafd2c9f743271228005473f2ef20c70
 * b3b6fba6876c2285b06682b50b24f0c07bb48b10
 * f02c2f945cc331eb1ba3dd50c741fa95b764f1a6
 * 2da063b4093b64061d3fdf114bc31792794b1692

[#156582073](https://www.pivotaltracker.com/story/show/156582073)

--- a/ci/docker/main-base/Dockerfile
+++ b/ci/docker/main-base/Dockerfile
@@ -1,6 +1,6 @@
 FROM bosh/main-ruby-go
 
-# BOSH dependencies {
+# BOSH dependencies
 RUN apt-get update && apt-get install -y \
 	libmariadbclient-dev \
 	redis-server \
@@ -12,38 +12,20 @@ RUN apt-get update && apt-get install -y \
 	unzip \
 	realpath \
 	&& apt-get clean
-# }
 
-# UAA dependencies {
-RUN \
-	mkdir -p /tmp/integration-uaa/cloudfoundry-identity-uaa-2.0.3 \
-	&& cd /tmp/integration-uaa/cloudfoundry-identity-uaa-2.0.3 \
-	&& curl -L https://s3.amazonaws.com/bosh-dependencies/apache-tomcat-8.0.21.tar.gz | tar xfz - \
-	&& curl --output /tmp/integration-uaa/cloudfoundry-identity-uaa-2.0.3/apache-tomcat-8.0.21/webapps/uaa.war \
-		-L https://s3.amazonaws.com/bosh-dependencies/cloudfoundry-identity-uaa-2.0.3.war \
-	&& curl -L --output /usr/local/bin/jq https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 \
-	&& chmod +x /usr/local/bin/jq
+# UAA dependencies
+RUN mkdir -p /tmp/integration-uaa/cloudfoundry-identity-uaa-2.0.3
+RUN curl -L https://s3.amazonaws.com/bosh-dependencies/apache-tomcat-8.0.21.tar.gz | (cd /tmp/integration-uaa/cloudfoundry-identity-uaa-2.0.3 && tar xfz -)
+RUN curl --output /tmp/integration-uaa/cloudfoundry-identity-uaa-2.0.3/apache-tomcat-8.0.21/webapps/uaa.war -L https://s3.amazonaws.com/bosh-dependencies/cloudfoundry-identity-uaa-2.0.3.war
+RUN curl -L --output /usr/local/bin/jq https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 && chmod +x /usr/local/bin/jq
 
-# install java {
-RUN \
-	export PACKAGE_NAME="zulu8.23.0.3-jdk8.0.144-linux_x64.tar.gz" \
-	&& export PACKAGE_MD5="6ecd67688407b9f7e45c2736f003398b" \
-	&& export PACKAGE_TMP="/tmp/${PACKAGE_NAME}" \
-	&& export PACKAGE_URL="http://cdn.azul.com/zulu/bin/${PACKAGE_NAME}" \
-	&& export INSTALL_PREFIX="/usr/lib/jvm" \
-	&& wget -O $PACKAGE_TMP --continue $PACKAGE_URL \
-	&& (echo "${PACKAGE_MD5}  ${PACKAGE_TMP}" | md5sum -c -) \
-	&& mkdir -p "${INSTALL_PREFIX}" \
-	&& tar xf "${PACKAGE_TMP}" -C "${INSTALL_PREFIX}" \
-	&& rm "${PACKAGE_TMP}"
-# }
-
+ADD install-java.sh /tmp/install-java.sh
+RUN chmod a+x /tmp/install-java.sh
+RUN cd /tmp && ./install-java.sh && rm install-java.sh
 ENV JAVA_HOME /usr/lib/jvm/zulu8.23.0.3-jdk8.0.144-linux_x64
 ENV PATH $JAVA_HOME/bin:$PATH
 
-RUN \
-	git config --global user.email "cf-bosh-eng+bosh-ci@pivotal.io" \
-	&& git config --global user.name "BOSH CI"
+RUN git config --global user.email "cf-bosh-eng+bosh-ci@pivotal.io"
+RUN git config --global user.name "BOSH CI"
 
 RUN date > /var/docker-image-timestamp
-# }
