--- a/ci/pipelines/docker-images/pipeline.yml
+++ b/ci/pipelines/docker-images/pipeline.yml
@@ -110,7 +110,9 @@ jobs:
           - "build-main-base"
       - put: main-mysql-5.5
         params:
-          build: "bosh-src/ci/docker/main-trusty-mysql-5.5"
+          build: "bosh-src/ci/docker/main-mysql"
+          build_args:
+            DB_VERSION: "-5.5"
         get_params:
           skip_download: true
 
@@ -124,7 +126,9 @@ jobs:
           - "build-main-base"
       - put: main-mysql-5.6
         params:
-          build: "bosh-src/ci/docker/main-trusty-mysql-5.6"
+          build: "bosh-src/ci/docker/main-mysql"
+          build_args:
+            DB_VERSION: "-5.6"
         get_params:
           skip_download: true
 
@@ -138,7 +142,9 @@ jobs:
           - "build-main-base"
       - put: main-mysql-5.7
         params:
-          build: "bosh-src/ci/docker/main-trusty-mysql-5.7"
+          build: "bosh-src/ci/docker/main-mysql"
+          build_args:
+            DB_VERSION: ""
         get_params:
           skip_download: true
 
