--- a/src/Gemfile
+++ b/src/Gemfile
@@ -33,6 +33,7 @@ end
 
 group :development, :test do
   gem 'bosh-dev', path: 'bosh-dev'
+  gem 'bosh_cpi', path: 'bosh_cpi'
 
   gem 'rspec', '~> 3.0.0'
   gem 'rspec-instafail'
